# crypt-3-hw

./: CMakeLists.txt  README.md  main.cpp
project/include/: crypt.h  split_recover.h
project/src/: crypt.cpp  split_recover.cpp
